src/app/globals.css
@import "tailwindcss";

:root {
    --background: #ffffff;
    --foreground: #171717;
    --header-height: calc(var(--text-xl) + 1rem);
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
    :root {
        --background: #0a0a0a;
        --foreground: #ededed;
    }
}

body {
    background: var(--background);
    color: var(--foreground);
    font-family: Arial, Helvetica, sans-serif;
}


.layout {
    display: grid;
    grid-template-columns: [begin header-start content-start] auto [header-end content-end end];
    grid-template-rows: [begin header-start] min-content [header-end content-start] auto [content-end end];
    height: 100dvh;
}

.chatbox-header {
    height: var(--header-height);
    grid-column: header-start / header-end;
    grid-row: header-start / header-end;
}

.chatbox-layout {
    height: calc(100dvh - var(--header-height));
    grid-column: content-start / content-end;
    grid-row: content-start / content-end;
    display: grid;
    grid-template-columns: [begin header-start messages-start input-start] auto [header-end messages-end input-end end];
    grid-template-rows: [begin header-start] min-content [header-end messages-start] auto [messages-end input-start] min-content [input-end end];
}

.chatbox-messages {
    grid-column: messages-start / messages-end;
    grid-row: messages-start / messages-end;
    overflow: auto;
}

.chatbox-input {
    grid-column: input-start / input-end;
    grid-row: input-start / input-end;
}

